2010-08-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync auxiliary files from upstream.
	* lib/config.guess, lib/config.sub, lib/texinfo.tex:
	Sync from upstream.

2010-08-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Work around a nasty bug (segfault) of Solaris make.
	* lib/am/check.am (recheck, recheck-html): Trim trailing spaces
	from $list, to avoid triggering a nasty bug (potential segfault)
	on Solaris make.

2010-08-06  Peter Rosin  <peda@lysator.liu.se>

	Make cond5.test more robust on MSYS.
	* tests/cond5.test: Add delay before the first kill attempt to
	cater for problems with MSYS bash.

2010-07-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Add example git work flow; discuss merge --log in HACKING.
	* HACKING: Update.
	Suggestion by Stefano Lattarini.

	Add more hints for debugging make rules.
	* doc/automake.texi (Debugging Make Rules): Show command to find
	out expanded values of variables; point to makefile debugger.
	* THANKS: Update.
	Prompted by suggestion from Ludovic Courtès and Andy Wingo.

2010-07-27  Patrick Welche  <prlw1@cam.ac.uk>  (tiny change)

	Fix typo in the manual.
	* doc/automake.texi (Scripts): Fix typo.

2010-07-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Document current policy for development with git.
	* HACKING (Working with git): Overhaul.
	Prompted by suggestion from Stefano Lattarini.

	Fix AM_COND_IF for gone-invalid condition shell expression.
	* m4/cond-if.m4 (AM_COND_IF): test contents of $COND_TRUE
	variable, rather than re-evaluating the shell expression for
	the condition.
	* tests/cond40.test: Extend test.
	* NEWS: Update.

	Avoid syntax error if IF-TRUE part of AM_COND_IF expands empty.
	* m4/cond-if.m4 (AM_COND_IF): Ensure IF-TRUE part is never empty
	to avoid shell syntax error if the m4 expansion is empty.
	* tests/cond40.test: Enhance test.

	Coverage: bogus option to AM_INIT_AUTOMAKE.
	* tests/init2.test: New test.
	* tests/Makefile.am: Update.
