@@ -48,15 +48,16 @@ $ACLOCAL
 $AUTOMAKE 2>stderr &
 pid=$!
 
-# MSYS bash seems to have a bug in kill, so don't try to kill too soon.
-sleep 2
+# MSYS bash seems to have a bug in kill, so don't try to kill too soon;
+# and avoid maintainer-check test.
+sleep '2'
 
 # Make at most 30 tries, one every 10 seconds (= 300 seconds = 5 min).
 try=1
 while test $try -le 30; do
   if kill -0 $pid; then
     : process $pid is still alive, wait and retry
-    sleep 10
+    sleep '10'
     try=`expr $try + 1`
   else
     cat stderr >&2
