@@ -1,5 +1,9 @@
 2010-08-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix maintainer-check failure.
+	* tests/cond5.test: Quote sleep argument, this isn't about
+	time stamp differences.
+
 	Sync auxiliary files from upstream.
 	* lib/config.guess, lib/config.sub, lib/texinfo.tex:
 	Sync from upstream.
